# haushalt

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build-backend.sh  default.nix  flake.nix  household.db-shm  household.db-wal  module.nix  result
backend/: Cargo.toml  migrate.sh
backend/migrations/: 20240101000000_initial.sql  20240102000000_add_invitations.sql  20240103000000_convert_tasks_to_habits.sql  20240104000000_user_assignments_amount.sql  20240105000000_enhanced_habits.sql  20240106000000_add_onetime_recurrence.sql  20240107000000_allow_exceed_target.sql  20240108000000_add_amount_to_task_links.sql  20240109000000_household_settings.sql  20240110000000_hierarchy_type.sql  20240112000000_activity_logs.sql  20240115000000_task_review.sql  20240116000000_reward_punishment_confirmation.sql  20240117000000_chat_messages.sql  20240118000000_notes.sql  20240119000000_announcements.sql  20240120000000_add_timezone.sql  20240121000000_user_settings.sql  20240122000000_optional_features.sql  20240123000000_task_points.sql  20240124000000_task_due_time.sql  20240125000000_missed_task_tracking.sql  20240126000000_refresh_tokens.sql  20240127000000_habit_type.sql  20240128000000_user_dashboard_tasks.sql  20240129000000_task_categories.sql  20240130000000_task_archived.sql  20240131000000_punishment_random_choice.sql  20240132000000_punishment_type.sql  20240133000000_journal_entries.sql  20240134000000_reward_type.sql  20240135000000_task_paused.sql  20240136000000_vacation_mode.sql  20240137000000_auto_archive_days.sql  20240138000000_task_period_results.sql  20240139000000_task_suggestions.sql  20240140000000_allow_task_suggestions.sql  20240141000000_week_start_day.sql  20240142000000_statistics_tables.sql  20240143000000_cleanup_invalid_period_results.sql  (+4 more)
backend/src/: config.rs  lib.rs  main.rs  test_utils.rs
backend/src/db/: mod.rs
backend/src/handlers/: activity_logs.rs  announcements.rs  auth.rs  chat.rs  dashboard.rs  households.rs  invitations.rs  journal.rs  legal.rs  mod.rs  notes.rs  point_conditions.rs  punishments.rs  rewards.rs  statistics.rs  task_categories.rs  tasks.rs  users.rs  websocket.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/models/: activity_log.rs  announcement.rs  chat_message.rs  household.rs  household_settings.rs  invitation.rs  journal.rs  membership.rs  mod.rs  note.rs  point_condition.rs  punishment.rs  refresh_token.rs  reward.rs  statistics.rs  task.rs  task_category.rs  task_completion.rs  task_period_result.rs  user.rs  user_settings.rs
backend/src/services/: activity_logs.rs  announcements.rs  auth.rs  background_jobs.rs  chat.rs  household_settings.rs  households.rs  invitations.rs  journal.rs  mod.rs  notes.rs  period_results.rs  points.rs  punishments.rs  rewards.rs  scheduler.rs  solo_mode.rs  statistics.rs  task_categories.rs  task_consequences.rs  tasks.rs  user_settings.rs  websocket.rs
docs/architecture/: 01-system-overview.md  03-frontend-components.md  04-database-schema.md  06-task-flow.md  09-gamification-flow.md
frontend/: Cargo.toml  Trunk.toml  default.nix  index.html  manifest.json  styles.css  sw.js
frontend/src/: app.rs  lib.rs
frontend/src/api/: mod.rs  websocket.rs
frontend/src/components/: accordion.rs  action_bar.rs  alert.rs  announcement_banner.rs  announcement_modal.rs  badge.rs  button.rs  calendar_picker.rs  card.rs  category_modal.rs  chat_message.rs  checkbox.rs  context_menu.rs  date_input.rs  divider.rs  empty_state.rs  form_group.rs  household_layout.rs  household_picker_modal.rs  household_tabs.rs  icon_button.rs  journal_entry_card.rs  journal_modal.rs  link.rs  list_item.rs  loading.rs  markdown.rs  mod.rs  modal.rs  navbar.rs  note_card.rs  note_modal.rs  number_input.rs  pending_confirmations.rs  pending_reviews.rs  pending_suggestions.rs  period_tracker.rs  points_display.rs  progress_bar.rs  punishment_modal.rs  (+15 more)
frontend/src/i18n/: mod.rs
frontend/src/pages/: activity.rs  chat.rs  dashboard.rs  household.rs  household_settings.rs  journal.rs  legal.rs  login.rs  mod.rs  notes.rs  point_conditions.rs  punishments.rs  register.rs  rewards.rs  settings.rs  statistics.rs  tasks.rs  user_settings.rs
frontend/src/translations/: de.json  en.json
frontend/src/utils/: filters.rs  mod.rs  pending_action.rs  task_modal.rs  timezone.rs
openspec/: config.yaml
shared/: Cargo.toml
shared/src/: types.rs
specs/architecture/: 02-backend-components.md  (+9 more)
(+68 files in other folders)
