[workspace]
resolver = "2"
members = [
    "backend",
    "frontend",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Backend dependencies
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-files = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
futures = "0.3"

# Frontend dependencies
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement"] }
console_error_panic_hook = "0.1"

[workspace.lints.rust]
warnings = "deny"
