[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

# Web framework
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Authentication
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand_core = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging
env_logger = { workspace = true }
log = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true, features = ["macros"] }

[lints]
workspace = true
